# seu-participation

./: .env.example  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
apps/common/: authentication.py
apps/common/api/: exceptions.py
apps/participation/: apps.py  tasks.py
apps/participation/application/use_cases/: accept_transfer.py  accept_waitlist_offer.py  batch_checkin.py  cancel.py  cancel_transfer.py  check_in.py  decline_waitlist_offer.py  generate_qr_token.py  generate_ticket_pdf.py  generate_wallet_pass.py  get_event_checkin_stats.py  get_passport.py  get_registration.py  initiate_transfer.py  list_my_registrations.py  list_my_shifts.py  promote_waitlist.py  register.py  validate_qr_token.py  verify_passport.py
apps/participation/domain/: entities.py  exceptions.py  repositories.py
apps/participation/infrastructure/: admin.py  consumer.py  event_client.py  models.py  plan_client.py  publisher.py  repositories.py  saved_events_models.py  ticket_pdf.py  wallet.py
apps/participation/migrations/: 0000_create_participation_schema.py  0001_initial.py  0002_add_notes_to_registration.py  0004_ticket_tiers_and_custom_forms.py  0005_registration_networking_opt_in_and_more.py  0006_waitlist_offer_fields.py  0007_event_participation_context.py  0008_ticket_transfer.py  0009_saved_event.py  0010_waitlist_entry_email_first_name.py
apps/participation/presentation/: serializers.py  urls.py  views.py
apps/participation/tests/unit/: fakes.py  (+29 more)
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
(+3 files in other folders)
