[project]
name = "participation-service"
version = "0.1.0"
description = "Event registration and check-in service for the Sansaar platform."
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "psycopg2-binary",
    "django-cors-headers",
    "python-decouple",
    "gunicorn",
    "redis",
    "pika",
    "drf-spectacular",
    "cryptography>=48.0.0",
    "celery[redis]>=5.3",
    "django-celery-beat>=2.6",
    "reportlab>=4.0",
    "qrcode>=8.0",
    "dj-database-url>=2.0.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "djangorestframework-stubs>=3.17.0",
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.8",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
exclude = ["migrations/", "tests/"]

[tool.django-stubs]
django_settings_module = "config.settings.development"

[[tool.mypy.overrides]]
module = [
    "apps.participation.infrastructure.*",
    "apps.participation.presentation.*",
    "apps.common.*",
    "config.*",
]
ignore_errors = true
